working on project section

--- a/index.html
+++ b/index.html
@@ -1,64 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Estate Website</title>
-    <link rel="stylesheet" href="bootstap.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="/font/Poppins.zip">
+    <!-- BOOTSTRAP  -->
+    <link rel="stylesheet" href="bootstap.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!-- FONT  -->
+    <link href="/font/Poppins.zip" />
     <!-- REMIX ICON  -->
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-</head>
-<body>
-    <!-- <div class="steps container">
-        <p>Three steps. Three minutes.</p>
-        <h2>Everything should be this easy.</h2>
-    </div> -->
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <!-- STYLE SHEET  -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
 
+       <!-- STEP SECTION START  -->
 
-    <div class="container steps container">
-        <p class="text-center">Three steps. Three minutes.</p>
-        <h2 class="text-center">Everything should be this easy.</h2>
-        <div class="row mt-4">
-          <div class="col">
-            <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem;">
-              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg> -->
-             
-              <i class="ri-question-answer-line px-3 fs-3 text-success"></i>
+    <div class="container steps-container">
+      <p class="text-center">Three steps. Three minutes.</p>
+      <h2 class="text-center">Everything should be this easy.</h2>
+      <div class="row mt-4">
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+            <i class="ri-question-answer-line px-3 fs-3 message"></i>
 
-              <div class="card-body">
-                <h5>Answer questions</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet bibendum in in vestibulum.</p>
-              </div>
+            <div class="card-body">
+              <h5 class="fw-bold">Answer questions</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet
+                bibendum in in vestibulum.
+              </p>
             </div>
           </div>
-  
-          <div class="col">
-            <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem;">
-              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg> -->
-              <i class="ri-mail-line px-3 fs-3 text-danger"></i>
-              <div class="card-body">
-                <h5>Select a quote</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet bibendum in in vestibulum. </p>
-              </div>
+        </div>
+
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+            <i class="ri-mail-line px-3 fs-3 quote"></i>
+            <div class="card-body">
+              <h5 class="fw-bold">Select a quote</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet
+                bibendum in in vestibulum.
+              </p>
             </div>
           </div>
-  
-          <div class="col">
-            <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem;">
-              <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg> -->
-              <i class="ri-edit-2-line px-3 fs-3 text-primary"></i>
-              <div class="card-body">
-                <h5>Get registered</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident ipsam soluta volup </p>
-              </div>
+        </div>
+
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+            <i class="ri-edit-2-line px-3 fs-3 pen"></i>
+            <div class="card-body">
+              <h5 class="fw-bold">Get registered</h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Provident ipsam soluta volup
+              </p>
             </div>
           </div>
         </div>
       </div>
-</body>
+    </div>
+
+    <!-- STEP SECTION END  -->
+
+
+    <!-- PROJECT SECTION START  -->
+    <div class="container project-section">
+      <p>Best Project of the Years</p>
+      <h2>Our recent projects</h2>
+      <div class="row mt-4">
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+
+            <img src="/assests/card-img-1.png" height="200" alt="">
+
+            <div class="card-body">
+              <h5 class="fw-bold">Sobha Hearland II Villas</h5>
+              <p class="card-text project-card-text">
+                Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet
+                bibendum in in vestibulum.
+              </p>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i> 
+              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+            <img src="/assests/card-img-2.png" alt="">
+            <div class="card-body">
+              <h5 class="fw-bold">Sobha Hearland II Villas</h5>
+              <p class="card-text project-card-text">
+                Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet
+                bibendum in in vestibulum.
+              </p>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i> 
+              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
+            <img src="/assests/card-img-3.png" height="200" alt="">
+            <div class="card-body">
+              <h5 class="fw-bold">Sobha Hearland II Villas</h5>
+              <p class="card-text project-card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Provident ipsam soluta volup
+              </p>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-fill filled-star"></i> 
+              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
