working on a new section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
        <!-- STEP SECTION START  -->
 
-    <div class="container steps-container">
+    <!-- <div class="container steps-container">
       <p class="text-center">Three steps. Three minutes.</p>
       <h2 class="text-center">Everything should be this easy.</h2>
       <div class="row mt-4">
@@ -69,13 +69,14 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- STEP SECTION END  -->
 
 
     <!-- PROJECT SECTION START  -->
-    <div class="container project-section">
+
+    <!-- <div class="container project-section">
       <p>Best Project of the Years</p>
       <h2>Our recent projects</h2>
       <div class="row mt-4">
@@ -135,6 +136,45 @@
           </div>
         </div>
       </div>
+    </div> -->
+  
+    <!-- PROJECT SECTION END  -->
+
+    <!-- BOOKING SECTION START  -->
+
+    <div class="container">
+      <h2 class="text-center">We are a global, boutique real <br> estate brokerage</h2>
+      <div class="row">
+        <div class="col">
+          <h3 class="mt-5">The transfer of real estate</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Feugiat ut aliquet sit pellentesque sollicitudin. Egestas faucibus lacus diam in senectus consectetur. Mattis elit adipiscing quisque tellus scelerisque vehicula ante nunc. Tellus consequat nisl quis nisl justo.</p>
+          <!-- <div class="buttons"> -->
+
+            <button type="submit" class="book-now mt-4">Book Now!</button>
+            <button type="submit" class="read-more mt-4">Read More</button>
+            
+          <!-- </div> -->
+
+          <div class="ratings d-flex mt-5">
+            <div id="customer">
+              <h1 class="px-5">12+</h1>
+              <p class="px-5">Customers</p>
+            </div>
+
+            <div id="offices">
+              <h1 class="px-5">14+</h1>
+              <p class="px-5">Offices</p>
+            </div>
+
+            <div id="students">
+              <h1 class="px-5">10+</h1>
+              <p class="px-5">Students</p>
+            </div>
+          </div>
+        </div>
+        <div class="col booking-img"><img src="/assests/booking.png" width="400" alt=""></div>
+      </div>
     </div>
+
   </body>
 </html>
