--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-       <!-- STEP SECTION START  -->
+    <!-- STEP SECTION START  -->
 
     <!-- <div class="container steps-container">
       <p class="text-center">Three steps. Three minutes.</p>
@@ -73,7 +72,6 @@
 
     <!-- STEP SECTION END  -->
 
-
     <!-- PROJECT SECTION START  -->
 
     <!-- <div class="container project-section">
@@ -82,8 +80,7 @@
       <div class="row mt-4">
         <div class="col">
           <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
-
-            <img src="/assests/card-img-1.png" height="200" alt="">
+            <img src="/assests/card-img-1.png" height="200" alt="" />
 
             <div class="card-body">
               <h5 class="fw-bold">Sobha Hearland II Villas</h5>
@@ -94,15 +91,16 @@
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
-              <i class="ri-shining-fill filled-star"></i> 
-              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-2-line unfilled"></i
+              ><span class="mx-2">4.83</span>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
-            <img src="/assests/card-img-2.png" alt="">
+            <img src="/assests/card-img-2.png" alt="" />
             <div class="card-body">
               <h5 class="fw-bold">Sobha Hearland II Villas</h5>
               <p class="card-text project-card-text">
@@ -112,15 +110,16 @@
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
-              <i class="ri-shining-fill filled-star"></i> 
-              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-2-line unfilled"></i
+              ><span class="mx-2">4.83</span>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card mb-3 mb-sm-5 mb-md-5 border-0" style="width: 18rem">
-            <img src="/assests/card-img-3.png" height="200" alt="">
+            <img src="/assests/card-img-3.png" height="200" alt="" />
             <div class="card-body">
               <h5 class="fw-bold">Sobha Hearland II Villas</h5>
               <p class="card-text project-card-text">
@@ -130,30 +129,36 @@
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
               <i class="ri-shining-fill filled-star"></i>
-              <i class="ri-shining-fill filled-star"></i> 
-              <i class="ri-shining-2-line unfilled"></i><span class="mx-2">4.83</span>
+              <i class="ri-shining-fill filled-star"></i>
+              <i class="ri-shining-2-line unfilled"></i
+              ><span class="mx-2">4.83</span>
             </div>
           </div>
         </div>
       </div>
     </div> -->
-  
+
     <!-- PROJECT SECTION END  -->
 
     <!-- BOOKING SECTION START  -->
 
-    <div class="container">
-      <h2 class="text-center">We are a global, boutique real <br> estate brokerage</h2>
+    <!-- <div class="container">
+      <h2 class="text-center">
+        We are a global, boutique real <br />
+        estate brokerage
+      </h2>
       <div class="row">
-        <div class="col">
+        <div class="col col-sm-12 col-md-12 col-lg-6">
           <h3 class="mt-5">The transfer of real estate</h3>
-          <p>Lorem ipsum dolor sit amet consectetur. Feugiat ut aliquet sit pellentesque sollicitudin. Egestas faucibus lacus diam in senectus consectetur. Mattis elit adipiscing quisque tellus scelerisque vehicula ante nunc. Tellus consequat nisl quis nisl justo.</p>
-          <!-- <div class="buttons"> -->
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Feugiat ut aliquet sit
+            pellentesque sollicitudin. Egestas faucibus lacus diam in senectus
+            consectetur. Mattis elit adipiscing quisque tellus scelerisque
+            vehicula ante nunc. Tellus consequat nisl quis nisl justo.
+          </p>
 
-            <button type="submit" class="book-now mt-4">Book Now!</button>
-            <button type="submit" class="read-more mt-4">Read More</button>
-            
-          <!-- </div> -->
+          <button type="submit" class="book-now mt-4">Book Now!</button>
+          <button type="submit" class="read-more mt-4">Read More</button>
 
           <div class="ratings d-flex mt-5">
             <div id="customer">
@@ -172,9 +177,30 @@
             </div>
           </div>
         </div>
-        <div class="col booking-img"><img src="/assests/booking.png" width="400" alt=""></div>
+        <div class="col booking-img col-sm-12 col-md-12 col-lg-6">
+          <img src="/assests/booking-img.png" alt="" />
+        </div>
+      </div>
+    </div> -->
+    <!-- BOOKING SECTION ENDS  -->
+
+    <!-- FOOTER SECTION START -->
+
+    <div class="container footer">
+      <div class="row">
+        <div class="col p-5">
+          <h2>Subscribe Our Newsletter</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur. Feugiat ut aliquet sit pellentesque sollicitudin. Egestas faucibus lacus diam in senectus consectetur. Mattis elit adipiscing quisque tellus scelerisque vehicula ante nunc.
+          </p>
+          <input type="email" name="email" id="email" placeholder="Enter your email" class="mb-2 ">
+          <button>Get a quote</button>
+        </div>
+        <div class="col d-flex align-item-center justify-content-center">
+          <img src="/assests/footer-img.png" alt="">
+        </div>
       </div>
     </div>
-
+     <!-- FOOTER SECTION START -->
   </body>
 </html>
